--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../dist/togglemenu-hover.css" />
         <link rel="stylesheet" href="../dist/togglemenu.css" />
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script>
+        <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js" ></script>
 
         <script src="../src/togglemenu-mega.js"></script>
         <script src="../src/togglemenu-overlay.js"></script>
