--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
         <script src="../src/togglemenu.js"></script>
         
         <script>
-            jQuery(document).ready(function($) {
+            jQuery(document).ready(function ($) {
                 var elements = {
                     nav: $('nav'),
                     navHover: $('#nav--hover'),
@@ -35,15 +35,15 @@
                 };
 
                 // ToggleMenu
-                var ToggleMenu = new $.ToggleMenu();
+                var toggleMenu = new $.ToggleMenu();
 
                 // Options
-                ToggleMenu.setOptions('hover', {
+                toggleMenu.setOptions('hover', {
                     elements: {
                         menu: elements.navHover
                     }
                 });
-                ToggleMenu.setOptions('push', {
+                toggleMenu.setOptions('push', {
                     elements: {
                         content: {
                             close: 'Fermer',
@@ -52,19 +52,19 @@
                     },
                     layout: 'data'
                 });
-                ToggleMenu.setOptions('fixed', {
+                toggleMenu.setOptions('fixed', {
                     elements: {
                         menu: elements.navFixed
                     }
                 });
-                ToggleMenu.setOptions('overlay', {
+                toggleMenu.setOptions('overlay', {
                     elements: {
                         content: {
                             menu: elements.navOverlay.children('ul')
                         }
                     }
                 });
-                ToggleMenu.setOptions('mega', {
+                toggleMenu.setOptions('mega', {
                     elements: {
                         menu: elements.navMega.children('ul'),
                         items: elements.navMega.find('li.is-parent'),
@@ -73,11 +73,11 @@
                 });
 
                 // A l'init
-                ToggleMenu.setDisplay(elements.demoType.val());
+                toggleMenu.setDisplay(elements.demoType.val());
 
                 // Au changement sur le <select>
-                elements.demoType.on('change', function() {
-                    ToggleMenu.setDisplay($(this).val());
+                elements.demoType.on('change', function () {
+                    toggleMenu.setDisplay($(this).val());
                 });
             });
         </script>
@@ -101,28 +101,28 @@
                 <h2 class="title title--h2">Navigation hover</h2>
 
                 <ul class="item-depth depth-1">
-                    <li class="item-nav"><a href="#"><span>Accueil</span></a></li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 1</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 1-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-2</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-3</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
                         </ul>
                     </li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 2</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 2-2</a></li>
-                            <li class="item-nav is-parent">
+                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
+                            <li class="nav-item is-parent">
                                 <a href="#">Menu 2-3</a>
 
                                 <ul class="item-depth depth-3">
-                                    <li class="item-nav"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-3-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -136,28 +136,28 @@
                 <button class="togglemenu-toggle"><span>Menu</span></button>
 
                 <ul class="item-depth depth-1">
-                    <li class="item-nav"><a href="#"><span>Accueil</span></a></li>
-                    <li class="item-nav is-parent" data-layout="panel">
+                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
+                    <li class="nav-item is-parent" data-layout="panel">
                         <a href="#"><span>Menu 1</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 1-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-2</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-3</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
                         </ul>
                     </li>
-                    <li class="item-nav is-parent" data-layout="panel">
+                    <li class="nav-item is-parent" data-layout="panel">
                         <a href="#"><span>Menu 2</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 2-2</a></li>
-                            <li class="item-nav is-parent" data-layout="accordion">
+                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
+                            <li class="nav-item is-parent" data-layout="accordion">
                                 <a href="#">Menu 2-3</a>
 
                                 <ul class="item-depth depth-3">
-                                    <li class="item-nav"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-3-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -171,28 +171,28 @@
                 <button class="togglemenu-toggle"><span>></span></button>
 
                 <ul class="item-depth depth-1">
-                    <li class="item-nav"><a href="#"><span>Accueil</span></a></li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 1</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 1-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-2</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-3</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
                         </ul>
                     </li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 2</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 2-2</a></li>
-                            <li class="item-nav is-parent">
+                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
+                            <li class="nav-item is-parent">
                                 <a href="#">Menu 2-3</a>
 
                                 <ul class="item-depth depth-3">
-                                    <li class="item-nav"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-3-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -206,28 +206,28 @@
                 <button class="togglemenu-toggle">Menu <span></span></button>
 
                 <ul class="item-depth depth-1">
-                    <li class="item-nav"><a href="#"><span>Accueil</span></a></li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 1</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 1-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-2</a></li>
-                            <li class="item-nav"><a href="#">Menu 1-3</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
+                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
                         </ul>
                     </li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 2</span></a>
 
                         <ul class="item-depth depth-2">
-                            <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                            <li class="item-nav"><a href="#">Menu 2-2</a></li>
-                            <li class="item-nav is-parent">
+                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
+                            <li class="nav-item is-parent">
                                 <a href="#">Menu 2-3</a>
 
                                 <ul class="item-depth depth-3">
-                                    <li class="item-nav"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-3-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -239,8 +239,8 @@
                 <h2 class="title title--h2">Navigation MegaMenu</h2>
 
                 <ul class="item-depth depth-1">
-                    <li class="item-nav"><a href="#"><span>Accueil</span></a></li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 1</span></a>
 
                         <div class="megamenu">
@@ -248,20 +248,20 @@
                                 <h3 class="title title--h3">Menu primaire</h3>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 1-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 1-2</a></li>
-                                    <li class="item-nav"><a href="#">Menu 1-3</a></li>
+                                    <li class="nav-item"><a href="#">Menu 1-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 1-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 1-3</a></li>
                                 </ul>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-2</a></li>
-                                    <li class="item-nav is-parent">
+                                    <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-2</a></li>
+                                    <li class="nav-item is-parent">
                                         <a href="#">Menu 2-3</a>
 
                                         <ul class="item-depth depth-3">
-                                            <li class="item-nav"><a href="#">Menu 2-3-1</a></li>
-                                            <li class="item-nav"><a href="#">Menu 2-3-2</a></li>
+                                            <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
+                                            <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -272,9 +272,9 @@
                                 <h3 class="title title--h3">Menu secondaire</h3>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-2</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-3</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-3</a></li>
                                 </ul>
                             </div>
 
@@ -282,16 +282,16 @@
                                 <h3 class="title title--h3">Menu tertiaire</h3>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 3-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 3-2</a></li>
-                                    <li class="item-nav"><a href="#">Menu 3-3</a></li>
+                                    <li class="nav-item"><a href="#">Menu 3-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 3-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 3-3</a></li>
                                 </ul>
                             </div>
 
                             <button class="togglemenu-close"><span>Fermer</span></button>
                         </div>
                     </li>
-                    <li class="item-nav is-parent">
+                    <li class="nav-item is-parent">
                         <a href="#"><span>Menu 2</span></a>
 
                         <div class="megamenu">
@@ -299,9 +299,9 @@
                                 <h3 class="title title--h3">Menu primaire</h3>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 1-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 1-2</a></li>
-                                    <li class="item-nav"><a href="#">Menu 1-3</a></li>
+                                    <li class="nav-item"><a href="#">Menu 1-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 1-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 1-3</a></li>
                                 </ul>
                                 <div class="clear"></div>
                             </div>
@@ -310,8 +310,8 @@
                                 <h3 class="title title--h3">Menu secondaire</h3>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 2-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 2-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 2-2</a></li>
                                 </ul>
                             </div>
 
@@ -319,8 +319,8 @@
                                 <h3 class="title title--h3">Menu tertiaire</h3>
 
                                 <ul class="item-depth depth-2">
-                                    <li class="item-nav"><a href="#">Menu 3-1</a></li>
-                                    <li class="item-nav"><a href="#">Menu 3-2</a></li>
+                                    <li class="nav-item"><a href="#">Menu 3-1</a></li>
+                                    <li class="nav-item"><a href="#">Menu 3-2</a></li>
                                 </ul>
                             </div>
 
