--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta content="width=device-width, user-scalable=no, maximum-scale=1.0, initial-scale=1" name="viewport">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>ToggleMenu</title>
         <link rel="stylesheet" href="demo.css" />
         
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="../dist/togglemenu-hover.css" />
         <link rel="stylesheet" href="../dist/togglemenu.css" />
 
-        <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js" ></script>
+        <script src="../node_modules/jquery/dist/jquery.min.js" ></script>
 
         <script src="../src/togglemenu-mega.js"></script>
         <script src="../src/togglemenu-overlay.js"></script>
