--- a/demo/hover.html
+++ b/demo/hover.html
@@ -64,6 +64,16 @@
                     </li>
                 </ul>
             </nav>
+
+            <footer>
+                <ul>
+                    <li><a class="is-active" href="hover.html">Hover</a></li>
+                    <li><a href="push.html">Push</a></li>
+                    <li><a href="overlay.html">Overlay</a></li>
+                    <li><a href="mega.html">Mega</a></li>
+                    <li><a href="fixed.html">Fixed</a></li>
+                </ul>
+            </footer>
         </div>
     </body>
 </html>
