--- a/demo/mega.html
+++ b/demo/mega.html
@@ -36,7 +36,7 @@
         <div class="page">
             <h1>Toggle Menu</h1>
 
-            <nav id="nav--mega" class="nav nav--mega">
+            <nav id="nav--mega" class="togglemenu togglemenu--mega">
                 <h2 class="title title--h2">Navigation MegaMenu</h2>
 
                 <ul class="item-depth depth-1">
@@ -130,6 +130,16 @@
                     </li>
                 </ul>
             </nav>
+
+            <footer>
+                <ul>
+                    <li><a href="hover.html">Hover</a></li>
+                    <li><a href="push.html">Push</a></li>
+                    <li><a href="overlay.html">Overlay</a></li>
+                    <li><a class="is-active" href="mega.html">Mega</a></li>
+                    <li><a href="fixed.html">Fixed</a></li>
+                </ul>
+            </footer>
         </div>
     </body>
 </html>
