--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -68,6 +68,16 @@
                     </li>
                 </ul>
             </nav>
+
+            <footer>
+                <ul>
+                    <li><a href="hover.html">Hover</a></li>
+                    <li><a href="push.html">Push</a></li>
+                    <li><a class="is-active" href="overlay.html">Overlay</a></li>
+                    <li><a href="mega.html">Mega</a></li>
+                    <li><a href="fixed.html">Fixed</a></li>
+                </ul>
+            </footer>
         </div>
     </body>
 </html>
