--- a/demo/fixed.html
+++ b/demo/fixed.html
@@ -67,5 +67,15 @@
                 </ul>
             </nav>
         </div>
+
+        <footer>
+            <ul>
+                <li><a href="hover.html">Hover</a></li>
+                <li><a href="push.html">Push</a></li>
+                <li><a href="overlay.html">Overlay</a></li>
+                <li><a href="mega.html">Mega</a></li>
+                <li><a class="is-active" href="fixed.html">Fixed</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
