--- a/demo/index.html
+++ b/demo/index.html
@@ -5,337 +5,21 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>ToggleMenu</title>
         <link rel="stylesheet" href="demo.css" />
-        
-        <link rel="stylesheet" href="../dist/togglemenu-mega.css" />
-        <link rel="stylesheet" href="../dist/togglemenu-overlay.css" />
-        <link rel="stylesheet" href="../dist/togglemenu-fixed.css" />
-        <link rel="stylesheet" href="../dist/togglemenu-push.css" />
-        <link rel="stylesheet" href="../dist/togglemenu-hover.css" />
-        <link rel="stylesheet" href="../dist/togglemenu.css" />
-
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-        <script src="../src/togglemenu-mega.js"></script>
-        <script src="../src/togglemenu-overlay.js"></script>
-        <script src="../src/togglemenu-fixed.js"></script>
-        <script src="../src/togglemenu-push.js"></script>
-        <script src="../src/togglemenu-hover.js"></script>
-        <script src="../src/togglemenu.js"></script>
-        
-        <script>
-            jQuery(document).ready(function ($) {
-                var elements = {
-                    nav: $('nav'),
-                    navHover: $('#nav--hover'),
-                    navPush: $('#nav--push'),
-                    navFixed: $('#nav--fixed'),
-                    navOverlay: $('#nav--overlay'),
-                    navMega: $('#nav--mega'),
-                    demoType: $('#demo-type')
-                };
-
-                // ToggleMenu
-                var toggleMenu = new $.ToggleMenu();
-
-                // Options
-                toggleMenu.setOptions('hover', {
-                    elements: {
-                        menu: elements.navHover
-                    }
-                });
-                toggleMenu.setOptions('push', {
-                    elements: {
-                        content: {
-                            close: 'Fermer',
-                            menu: elements.navPush.children('ul')
-                        }
-                    },
-                    layout: 'data'
-                });
-                toggleMenu.setOptions('fixed', {
-                    elements: {
-                        menu: elements.navFixed
-                    }
-                });
-                toggleMenu.setOptions('overlay', {
-                    elements: {
-                        content: {
-                            menu: elements.navOverlay.children('ul')
-                        }
-                    }
-                });
-                toggleMenu.setOptions('mega', {
-                    elements: {
-                        menu: elements.navMega.children('ul'),
-                        items: elements.navMega.find('li.is-parent'),
-                        close: elements.navMega.find('button.togglemenu-close')
-                    }
-                });
-
-                // A l'init
-                toggleMenu.setDisplay(elements.demoType.val());
-
-                // Au changement sur le <select>
-                elements.demoType.on('change', function (event) {
-                    let val = $(event.currentTarget).val();
-
-                    if (val === 'disable') {
-                        toggleMenu.removeMenu();
-                    } else {
-                        toggleMenu.setDisplay(val);
-                    }
-                });
-            });
-        </script>
     </head>
     <body>
         <div class="page">
             <h1>Toggle Menu</h1>
 
             <div class="demo-type">
-                <label for="demo-type">Type de menu :</label>
-                <select id="demo-type" name="demo-type">
-                    <option value="disable">- Aucun -</option>
-                    <option value="hover" selected>Hover</option>
-                    <option value="push">Push</option>
-                    <option value="fixed">Fixed</option>
-                    <option value="overlay">Overlay</option>
-                    <option value="mega">Mega</option>
-                </select>
+                <p>Type de menu :</p>
+                <ul>
+                    <li><a href="hover.html">Hover</a></li>
+                    <li><a href="push.html">Push</a></li>
+                    <li><a href="overlay.html">Overlay</a></li>
+                    <li><a href="mega.html">Mega</a></li>
+                    <li><a href="fixed.html">Fixed</a></li>
+                </ul>
             </div>
-
-            <nav id="nav--hover" class="nav nav--hover is-hidden">
-                <h2 class="title title--h2">Navigation hover</h2>
-
-                <ul class="item-depth depth-1">
-                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 1</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 2</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                            <li class="nav-item is-parent">
-                                <a href="#">Menu 2-3</a>
-
-                                <ul class="item-depth depth-3">
-                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
-            <nav id="nav--push" class="nav nav--push is-hidden">
-                <h2 class="title title--h2">Navigation push</h2>
-
-                <button class="togglemenu-toggle"><span>Menu</span></button>
-
-                <ul class="item-depth depth-1">
-                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
-                    <li class="nav-item is-parent" data-layout="panel">
-                        <a href="#"><span>Menu 1</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item is-parent" data-layout="panel">
-                        <a href="#"><span>Menu 2</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                            <li class="nav-item is-parent" data-layout="accordion">
-                                <a href="#">Menu 2-3</a>
-
-                                <ul class="item-depth depth-3">
-                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
-            <nav id="nav--fixed" class="nav nav--fixed is-hidden">
-                <h2 class="title title--h2">Navigation fixed</h2>
-
-                <button class="togglemenu-toggle"><span>></span></button>
-
-                <ul class="item-depth depth-1">
-                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 1</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 2</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                            <li class="nav-item is-parent">
-                                <a href="#">Menu 2-3</a>
-
-                                <ul class="item-depth depth-3">
-                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
-            <nav id="nav--overlay" class="nav nav--overlay is-hidden">
-                <h2 class="title title--h2">Navigation overlay</h2>
-
-                <button class="togglemenu-toggle">Menu <span></span></button>
-
-                <ul class="item-depth depth-1">
-                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 1</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 1-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-2</a></li>
-                            <li class="nav-item"><a href="#">Menu 1-3</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 2</span></a>
-
-                        <ul class="item-depth depth-2">
-                            <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                            <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                            <li class="nav-item is-parent">
-                                <a href="#">Menu 2-3</a>
-
-                                <ul class="item-depth depth-3">
-                                    <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
-            <nav id="nav--mega" class="nav nav--mega is-hidden">
-                <h2 class="title title--h2">Navigation MegaMenu</h2>
-
-                <ul class="item-depth depth-1">
-                    <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 1</span></a>
-
-                        <div class="megamenu">
-                            <div class="item-menu menu-primary">
-                                <h3 class="title title--h3">Menu primaire</h3>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 1-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 1-2</a></li>
-                                    <li class="nav-item"><a href="#">Menu 1-3</a></li>
-                                </ul>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                                    <li class="nav-item is-parent">
-                                        <a href="#">Menu 2-3</a>
-
-                                        <ul class="item-depth depth-3">
-                                            <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
-                                            <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                                <div class="clear"></div>
-                            </div>
-
-                            <div class="item-menu menu-secondary">
-                                <h3 class="title title--h3">Menu secondaire</h3>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-3</a></li>
-                                </ul>
-                            </div>
-
-                            <div class="item-menu menu-tertiary">
-                                <h3 class="title title--h3">Menu tertiaire</h3>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 3-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 3-2</a></li>
-                                    <li class="nav-item"><a href="#">Menu 3-3</a></li>
-                                </ul>
-                            </div>
-
-                            <button class="togglemenu-close"><span>Fermer</span></button>
-                        </div>
-                    </li>
-                    <li class="nav-item is-parent">
-                        <a href="#"><span>Menu 2</span></a>
-
-                        <div class="megamenu">
-                            <div class="item-menu menu-primary">
-                                <h3 class="title title--h3">Menu primaire</h3>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 1-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 1-2</a></li>
-                                    <li class="nav-item"><a href="#">Menu 1-3</a></li>
-                                </ul>
-                                <div class="clear"></div>
-                            </div>
-
-                            <div class="item-menu menu-secondary">
-                                <h3 class="title title--h3">Menu secondaire</h3>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 2-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 2-2</a></li>
-                                </ul>
-                            </div>
-
-                            <div class="item-menu menu-tertiary">
-                                <h3 class="title title--h3">Menu tertiaire</h3>
-
-                                <ul class="item-depth depth-2">
-                                    <li class="nav-item"><a href="#">Menu 3-1</a></li>
-                                    <li class="nav-item"><a href="#">Menu 3-2</a></li>
-                                </ul>
-                            </div>
-
-                            <button class="togglemenu-close"><span>Fermer</span></button>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </body>
 </html>
