--- a/demo/push.html
+++ b/demo/push.html
@@ -71,5 +71,15 @@
                 </ul>
             </nav>
         </div>
+
+        <footer>
+            <ul>
+                <li><a href="hover.html">Hover</a></li>
+                <li><a class="is-active" href="push.html">Push</a></li>
+                <li><a href="overlay.html">Overlay</a></li>
+                <li><a href="mega.html">Mega</a></li>
+                <li><a href="fixed.html">Fixed</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
