--- a/demo/push.html
+++ b/demo/push.html
@@ -41,12 +41,12 @@
 
                 <button class="togglemenu-toggle"><span>Menu</span></button>
 
-                <ul class="item-depth depth-1">
+                <ul class="nav-menu level-1">
                     <li class="nav-item"><a href="#"><span>Accueil</span></a></li>
                     <li class="nav-item is-parent" data-layout="panel">
                         <a href="#"><span>Menu 1</span></a>
 
-                        <ul class="item-depth depth-2">
+                        <ul class="nav-menu level-2">
                             <li class="nav-item"><a href="#">Menu 1-1</a></li>
                             <li class="nav-item"><a href="#">Menu 1-2</a></li>
                             <li class="nav-item"><a href="#">Menu 1-3</a></li>
@@ -55,13 +55,13 @@
                     <li class="nav-item is-parent" data-layout="panel">
                         <a href="#"><span>Menu 2</span></a>
 
-                        <ul class="item-depth depth-2">
+                        <ul class="nav-menu level-2">
                             <li class="nav-item"><a href="#">Menu 2-1</a></li>
                             <li class="nav-item"><a href="#">Menu 2-2</a></li>
                             <li class="nav-item is-parent" data-layout="accordion">
                                 <a href="#">Menu 2-3</a>
 
-                                <ul class="item-depth depth-3">
+                                <ul class="nav-menu level-3">
                                     <li class="nav-item"><a href="#">Menu 2-3-1</a></li>
                                     <li class="nav-item"><a href="#">Menu 2-3-2</a></li>
                                 </ul>
