Push: revert to jQuery slide system

--- a/demo/fixed.html
+++ b/demo/fixed.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../dist/togglemenu.css" />
         <link rel="stylesheet" href="../dist/togglemenu-fixed.css" />
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
 
         <script src="../src/togglemenu.js"></script>
         <script src="../src/togglemenu-fixed.js"></script>
